--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ bio:                '一个普通人'
 description:        "先写着，万一以后忘了呢。。。"
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo.png'
-background:         'assets/img/江湖-01.png'
+logo:               'assets/img/江湖-01.png'
+background:         'assets/img/记6月12日夜.png'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             zh_CN
 url:                https://gowantong.github.io/
 
 # Jekyll
-permalink:          /:title/
+permalink:          /:year/:month/:day/:title/
 markdown:           kramdown
 highlighter:        rouge
 kramdown:
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   taylantatli
+disqus_shortname:   Go
 
 # Social
 # if you don't have any of social below, comment the line.
